src/Traffk.Portal/wwwroot/css/styles.css
/* ... */
/* active state */
input.form-text:focus ~ label, input.form-text:valid ~ label {
  top:-20px;
  font-size:14px;
}

/* BOTTOM BARS ================================= */
.bar 	{ position:relative; display:block; width:300px; }
.bar:before, .bar:after 	{
  content:'';
  height:2px; 
  width:0;
  bottom:1px; 
  position:absolute;
  transition:0.2s ease all; 
  -moz-transition:0.2s ease all; 
  -webkit-transition:0.2s ease all;
}
.bar:before {
  left:50%;
}
.bar:after {
  right:50%; 
}

/* active state */
input.form-text:focus ~ .bar:before, input.form-text:focus ~ .bar:after {
  width:50%;
}

/* HIGHLIGHTER ================================== */
.highlight {
  position:absolute;
  height:60%; 
  width:300px; 
  top:25%; 
  left:0;
  pointer-events:none;
  opacity:0.5;
}

/* active state */
input.form-text:focus ~ .highlight {
  -webkit-animation:inputHighlighter 0.3s ease;
  -moz-animation:inputHighlighter 0.3s ease;
  animation:inputHighlighter 0.3s ease;
}

/* ANIMATIONS ================ */
@-webkit-keyframes inputHighlighter {
	from { background:#5264AE; }
  to 	{ width:0; background:transparent; }
}
@-moz-keyframes inputHighlighter {
	from { background:#5264AE; }
  to 	{ width:0; background:transparent; }
}
@keyframes inputHighlighter {
	from { background:#5264AE; }
  to 	{ width:0; background:transparent; }
}
/* Traffk */
@font-face {
    font-family: 'Bauhaus';
    src: url('../fonts/BAUHS93.TTF');
}

.BAUHS93 {
    font-family: 'Bauhaus', sans-serif;
}

html {
  height: 100%;
  background: #FFF;
}
a, a:hover {
  transition: all 0.15s ease-in-out;
  cursor: pointer;
}
.copyright {
  font-size: 13px;
  color: #aaa;
}
.popup {
  font-size: 18px;
}
.centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
}
#back-to-top {
    position: fixed;
    bottom: 40px;
    right: 40px;
    z-index: 9999;
    width: 32px;
    height: 32px;
    text-align: center;
    line-height: 30px;
    background: #f5f5f5;
    color: #444;
    cursor: pointer;
    border: 0;
    border-radius: 2px;
    text-decoration: none;
    transition: opacity 0.2s ease-out;
    opacity: 0;
}
#back-to-top:hover {
    background: #e9ebec;
}
#back-to-top.show {
    opacity: 1;
}
#content {
    height: 2000px;
}
#wrapper {
  padding-left: 0;
}
.navbar {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5) !important;
}
.navbar-inverse .navbar-brand, .top-nav > li > a {
  color: #FFFFFF;
}
.navbar-brand {
  padding: 0 0 0 30px;
}
.top-nav>li>a:hover,
.top-nav>li>a:focus,
.top-nav>.open>a,
.top-nav>.open>a:hover,
.top-nav>.open>a:focus {
    color: #fff;
    background-color: transparent;
}
.top-nav {
  margin-right: 0;
}
.top-nav > li > a {
  padding: 0 15px;
}
.navbar-brand, .top-nav > li > a {
  height: 60px;
  line-height: 60px;
}
#primary-subnav .dropdown-menu {
  left: -20px;
}
#primary-subnav .dropdown-menu li {
  display: inline-block;
}
#primary-subnav .dropdown-menu li a {
  font-size: 18px;
  padding: 12px 55px;
  letter-spacing: .75px;
}
#primary-subnav .dropdown-menu li.active a {
  background: inherit;
  font-weight: bold;
}
#primary-subnav .dropdown-menu li.dropdown a.dropdown-toggle.active {
    background: inherit;
    font-weight: bold;
}

#primary-subnav .dropdown-menu li a.active {
    background: inherit;
    font-weight: bold;
}
.top-nav > .open > .dropdown-menu {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5) 
}
/*li ul {
    display: none;
}*/

.dropdown-menu li:hover > ul {
    display: block;
    float: left;
    position: absolute;
    margin-top: 0;
    border: 1px solid rgba(0,0,0,.15);
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    background-color: #fff;
    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
}

ul ul ul {
    left: 100%;
    top: 0;
}

#primary-subnav .dropdown-menu .dropdown-submenu li {
    display: block;
}

#primary-subnav .dropdown-menu .dropdown-submenu li a{
    padding-right: 20px;
    padding-left: 20px;
}

#primary-subnav .dropdown-menu .dropdown-submenu{
  left: 0px;
}

#page-wrapper {
  padding-top: 25px;
  font-size: 18px;
}
#page-wrapper .row {
  margin-bottom: 30px;
}
#nav-help .fa {
  position: relative;
  top: 5px;
}
.top-nav > li > a {
  padding: 0 18px;
}
.alert {
  margin-top: 20px;
  margin-bottom: 0;
  font-size: 14px;
}
.page-header {
  margin-top: 20px;
}
#footer {
  border-top: 1px solid #000;
  margin-top: 10px;
}
#footer-menu {
  padding-left: 0;	
}
#footer-menu li {
  display: inline-block;
}
#footer-menu li a {
  display: block;
  color: #000;
  padding: 25px 20px;
}
.large-padding {
  padding: 50px;
}
.medium-padding {
  padding: 20px 50px;
}
.small-padding {
  padding: 20px 30px;
}
.panel {
  box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.3);
  border-radius: 0;
  border: none;
  min-height: 100%;
}
.panel.small-padding {
  overflow: auto;    
}
.form-row {
  margin-bottom: 40px;
}
label {
  margin-bottom: 0;
  vertical-align: top !important;
}
.form-label {
  width: 100%;
  text-align: left;
  vertical-align: top;
  color: #333;
  position: relative;
  top: 4.5px;
  font-size: 16px;
}
.form-label-inline {
  display: inline-block !important;
  width: 200px;
  text-align: right;
  margin-bottom: 0;
}
.form-label-block {
  display: block !important;
}
.form-label-inline {
  display: inline-block;
}
.form-text, .form-dropdown {
  display: inline-block;
  width: 100%;
  border: none;
  border-radius: 0 !important;
  padding: 5px 5px;
  color: #666;
  vertical-align: top;
  border-radius: 4px;
  font-size: 18px;
}
.form-text:focus, .form-dropdown:focus {
  color: #333;
  transition: all 0.2s ease-in-out;
  background: #fefefe;
}

.form-row > p {
    color: #666;
    display: inline-block !important;
    font-size: 14px;
    margin-bottom: 0;
}
input[type="radio"] {
  vertical-align: middle !important;
  margin: 0 4px 0 0;
}
.popup-content-container .form-label {
  width: 125px;
}
/* ... */

